Add normalize API
